# mnist

./: Cargo.toml
src/: main.rs  model.rs  pred.rs  train.rs
