[package]
name = "mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = ["cuda"] }
candle = { package = "candle-core", git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = ["cuda"] }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = ["cuda"] }
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
